lang/macro/tests/ui/fail/18-conflicting-ink-markers-2.stderr
error: invalid ink! attribute found for `#[ink(event)]` struct
 --> $DIR/18-conflicting-ink-markers-2.rs:9:10
  |
9 |     #[ink(storage)] // We cannot have #[ink(storage)] if we already have #[ink(event)]
  |          ^^^^^^^^^
